--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,14 +6,16 @@ name: Docker
 # documentation.
 
 on:
-  schedule:
-    - cron: '23 3 * * *'
+  #schedule:
+    #- cron: '23 3 * * *'
   push:
-    branches: [ "master" ]
+    #branches: [ "master" ]
+    branches: [ "unraid" ]
     # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
+    #tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ "master" ]
+    #branches: [ "master" ]
+    branches: [ "unraid" ]
 
 env:
   # Use docker.io for Docker Hub if empty
