--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,20 +9,18 @@ on:
   #schedule:
     #- cron: '23 3 * * *'
   push:
-    #branches: [ "master" ]
-    branches: [ "unraid" ]
+    branches: [ "master" ]
     # Publish semver tags as releases.
     #tags: [ 'v*.*.*' ]
   pull_request:
-    #branches: [ "master" ]
-    branches: [ "unraid" ]
+    branches: [ "master" ]
 
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
-
+  IMAGE_OWNER: ${{ github.repository_owner }}
 
 jobs:
   build:
@@ -69,7 +67,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
