Fixing registry URL

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,7 +9,7 @@ on:
   #schedule:
     #- cron: '23 3 * * *'
   push:
-    #branches: [ "master" ]
+    branches: [ "unraid" ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   #pull_request:
@@ -20,7 +20,7 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
-  IMAGE_OWNER: ${{ github.repository_owner }}
+  #IMAGE_OWNER: ${{ github.repository_owner }}
 
 jobs:
   build:
@@ -66,13 +66,13 @@ jobs:
         id: meta
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           # Set 'latest' and semver tags
-          tags: |
-            type=raw,value=latest
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
+          #tags: |
+            #type=raw,value=latest
+            #type=semver,pattern={{version}}
+            #type=semver,pattern={{major}}.{{minor}}
+            #type=semver,pattern={{major}}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
